--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
+    "@chromatic-com/storybook": "^1.3.3",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/addon-onboarding": "^8.0.9",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
+    "@storybook/blocks": "^8.0.9",
+    "@storybook/react": "^8.0.9",
+    "@storybook/react-webpack5": "^8.0.9",
+    "@storybook/test": "^8.0.9",
     "@types/react": "^18.3.1",
     "babel-loader": "^8.3.0",
+    "storybook": "^8.0.9",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
@@ -23,6 +34,8 @@
   },
   "scripts": {
     "compile": "npx webpack",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run compile",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   }
 }
