--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,5 +14,6 @@ jobs:
     - id: build-publish
       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.0
       with:
-        path: dist/storybook
+        path: storybook-static
         build_command: npm run build-storybook
+        checkout: false
