--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
+    "@jest/globals": "^29.7.0",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -25,7 +26,9 @@
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "@types/react": "^18.3.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.3.0",
+    "jest": "^29.7.0",
     "storybook": "^8.0.9",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
@@ -36,6 +39,7 @@
     "compile": "npx webpack",
     "prepublish": "npm run compile",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest"
   }
 }
