--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^8.3.0",
     "jest": "^29.7.0",
