--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "logojs-react",
+  "type": "module",
   "license": "MIT",
   "version": "2.1.1",
   "description": "React Components for rendering sequence logos",
@@ -17,6 +18,11 @@
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
     "@jest/globals": "^29.7.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -31,6 +37,8 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^8.3.0",
     "jest": "^29.7.0",
+    "rollup": "^4.17.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook": "^8.0.9",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
