--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "storybook": "^8.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.11",
+    "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.6.0"
   }
 }
