--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "react-ts",
-  "private": true,
-  "version": "0.0.0",
+  "name": "logomakerjs",
+  "version": "0.1.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/riyavsinha/logomakerjs"
+  },
   "type": "module",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
