--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "logomakerjs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/riyavsinha/logomakerjs"
   },
   "license": "MIT",
   "type": "module",
-  "main": "./dist/index.umd.cjs",
+  "main": "./dist/index.umd.js",
   "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
+  "module": "./dist/index.es.js",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
+      "import": "./dist/index.es.js",
       "require": "./dist/index.umd.cjs"
     }
   },
